# rtos-if-drivers

./: CMakeLists.txt  Kconfig.intel  README.rst
boards/arm/ehl_pse_crb/: ehl_pse_crb.dts  ehl_pse_crb_defconfig
drivers/: CMakeLists.txt  Kconfig
drivers/arm/ethernet/: CMakeLists.txt  Kconfig  Kconfig.dw_tsn  Kconfig.dwc_eqos_v5  Kconfig.eth_gen_phy  Kconfig.eth_phy_marvell  Kconfig.phy  Kconfig.pse_vnic  dw_tsn_lib.c  dw_tsn_lib.h  eth_dwc_eqos_v5.c  eth_dwc_eqos_v5_macros.h  eth_dwc_eqos_v5_netprox.c  eth_dwc_eqos_v5_netprox.h  eth_dwc_eqos_v5_netprox_proto.h  eth_dwc_eqos_v5_priv.h  eth_pse_vnic.c  gen_phy.c  gen_phy.h  network_proxy_common.h  phy.c  phy_marvell_88e1512.c  phy_marvell_88e1512.h
drivers/audio/: CMakeLists.txt  Kconfig  Kconfig.alc_5660I  alc_5660I.c  alc_5660I.h
drivers/can/: CMakeLists.txt  Kconfig  Kconfig.can_intel  Kconfig.sedi  can_sedi.c  can_sedi.h
drivers/counter/: CMakeLists.txt  Kconfig  Kconfig.sedi  counter_sedi_pwm.c
drivers/dma/: CMakeLists.txt  Kconfig  Kconfig.sedi  dma_sedi.c
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.sedi  gpio_sedi.c  gpio_timed_handlers.c  gpio_timed_sedi.c
drivers/i2c/: CMakeLists.txt  Kconfig  Kconfig.sedi  i2c_sedi.c
drivers/i2s/: CMakeLists.txt  Kconfig  Kconfig.sedi  i2s_sedi.c  i2s_sedi.h
drivers/ipc/: CMakeLists.txt  Kconfig  Kconfig.ipc_intel  Kconfig.sedi  ipc_handlers.c  ipc_sedi.c  ipc_sedi.h
drivers/pwm/: CMakeLists.txt  Kconfig  Kconfig.pwm_intel  Kconfig.sedi  pwm_sedi.c
drivers/qep/: CMakeLists.txt  Kconfig  Kconfig.sedi  qep_handlers.c  qep_sedi.c
drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.sedi  Kconfig.uart_intel  uart_sedi.c
drivers/sideband/: CMakeLists.txt  Kconfig  sedi_sideband.c  sideband_handlers.c
drivers/spi/: CMakeLists.txt  Kconfig  Kconfig.sedi  Kconfig.spi_intel  spi_sedi.c
drivers/tgpio/: CMakeLists.txt  Kconfig
drivers/timer/: CMakeLists.txt  Kconfig  Kconfig.pse
drivers/tsync/: CMakeLists.txt  Kconfig  sedi_tsync.c  tsync_handlers.c
drivers/watchdog/: CMakeLists.txt  Kconfig  Kconfig.sedi  watchdog_sedi.c
dts/arm/intel/: pse.dtsi
dts/bindings/can/: intel,ia-can.yaml  intel,pse-can.yaml
dts/bindings/dma/: intel,ia-dma.yaml  intel,sedi-dma.yaml
dts/bindings/gpio/: intel,ehl-gpio.yaml  intel,elkhart-lake-gpio.yaml  intel,pse-gpio.yaml
dts/bindings/i2c/: intel,pse-i2c.yaml
dts/bindings/i2s/: intel,pse-i2s.yaml
dts/bindings/ipc/: intel,ipc.yaml  intel,sedi-ipc.yaml
dts/bindings/pwm/: intel,ia-pwm.yaml  intel,pse-pwm.yaml
dts/bindings/qep/: intel,pse-qep.yaml
dts/bindings/serial/: intel,ia-uart.yaml  intel,pse-uart.yaml
dts/bindings/sideband/: intel,pse-sideband.yaml
dts/bindings/spi/: intel,pse-spi.yaml  intel,spi.yaml
dts/bindings/tgpio/: intel,pse-tgpio.yaml
dts/bindings/watchdog/: intel,pse-watchdog.yaml
include/drivers/: ipc.h  qep.h  sideband.h  tsync.h
include/drivers/ethernet/: phy_ehl.h
include/net/: mii.h  phy.h  phy_pse.h
modules/: modules.cmake
modules/hal_intel/: CMakeLists.txt  Kconfig
modules/hal_sedi/: CMakeLists.txt  Kconfig
share/zephyrbuild-package/cmake/: ZephyrBuildConfig.cmake
soc/: Kconfig
soc/arm/elkhart_lake_pse/: CMakeLists.txt  Kconfig.soc  arm_mpu_mem_cfg.h  arm_mpu_regions.c  linker.ld  soc.c  soc.h  soc_temp.c  soc_temp.h
subsys/: CMakeLists.txt  Kconfig
subsys/logging/: CMakeLists.txt  Kconfig  log_backend_dtf.c
zephyr/: module.yml
