# Copyright (c) 2021 Intel Corp.
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(ethernet)
add_subdirectory(timer)
add_subdirectory(dma)
add_subdirectory(ipc)
add_subdirectory(serial)
add_subdirectory(spi)
add_subdirectory(tgpio)
add_subdirectory(qep)
add_subdirectory(can)
add_subdirectory(pwm)
add_subdirectory(watchdog)
add_subdirectory(i2c)
add_subdirectory(gpio)
add_subdirectory(i2s)
add_subdirectory(audio)
add_subdirectory(sideband)
add_subdirectory(counter)
add_subdirectory(disk)
