# Copyright (c) 2021 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

if (CONFIG_HAS_INTEL)
  zephyr_library()

  set(INTEL_DIR ${ZEPHYR_CURRENT_MODULE_DIR}/)
  set(INC_DIR ${INTEL_DIR}/)
  set(SRC_DIR ${INTEL_DIR}/drivers/)

  zephyr_include_directories(${INC_DIR}/include)
  zephyr_include_directories(${INC_DIR}/soc/ehl/include)
  zephyr_include_directories(${INTEL_DIR}/service/ia_services/include)

  zephyr_library_sources(${SRC_DIR}/common/hal_driver_common.c)
  zephyr_library_sources_ifdef(CONFIG_INTEL_DMA    ${SRC_DIR}/dma/dma_ann_1p0.c)
  zephyr_library_sources_ifdef(CONFIG_INTEL_UART    ${SRC_DIR}/uart/dw_uart.c)
  zephyr_library_sources_ifdef(CONFIG_INTEL_SPI    ${SRC_DIR}/spi/dw_spi.c)
  zephyr_library_sources_ifdef(CONFIG_INTEL_TGPIO    ${SRC_DIR}/tgpio/intel_tgpio.c)
  zephyr_library_sources_ifdef(CONFIG_INTEL_PWM    ${SRC_DIR}/pwm/intel_pwm.c)
  zephyr_library_sources_ifdef(CONFIG_INTEL_EMMC    ${SRC_DIR}/emmc/emmc_5p1.c)
  zephyr_library_sources_ifdef(CONFIG_INTEL_CAN    ${SRC_DIR}/can/intel_can.c)
  zephyr_library_sources_ifdef(CONFIG_IPC_INTEL    ${SRC_DIR}/ipc/ipc_bsp.c)
endif()

if (CONFIG_HAS_SEDI)
  set(SEDI_DIR ${ZEPHYR_CURRENT_MODULE_DIR}/)
  set(sedi_lib_src_dir ${ZEPHYR_CURRENT_MODULE_DIR}/soc/arm/elkhart_lake_pse/sedi)
  zephyr_include_directories(${sedi_lib_src_dir}/include)
  zephyr_include_directories(${sedi_lib_src_dir}/include/driver)
  zephyr_include_directories(${sedi_lib_src_dir}/soc/ehl_pse/include)
  if(EXISTS ${SEDI_DIR}/../../../ehl_pse-fw/libs/libsedi_base.a)
    target_link_libraries(zephyr_interface INTERFACE ${SEDI_DIR}/../../../ehl_pse-fw/libs/libsedi_base.a)
    if (CONFIG_NEWLIB_LIBC AND CONFIG_NEWLIB_LIBC_NANO)
      target_link_libraries(zephyr_interface INTERFACE libc_nano.a)
    elseif(CONFIG_NEWLIB_LIBC)
      target_link_libraries(zephyr_interface INTERFACE libc.a)
    endif()
else()
   zephyr_library_named(sedi_base)
   zephyr_library_include_directories(${sedi_lib_src_dir}/include/driver)
   zephyr_library_include_directories(${sedi_lib_src_dir}/drivers)
   zephyr_library_include_directories(${sedi_lib_src_dir}/soc/ehl_pse/include)
   zephyr_library_include_directories(${sedi_lib_src_dir}/include)
   zephyr_library_sources(${sedi_lib_src_dir}/drivers/common/sedi_common.c)
   zephyr_library_sources(${sedi_lib_src_dir}/drivers/rtc/pse_rtc.c)
   zephyr_library_sources(${sedi_lib_src_dir}/drivers/sideband/sideband.c)
   zephyr_library_sources(${sedi_lib_src_dir}/drivers/tsync/tsync.c)
   zephyr_library_sources(${sedi_lib_src_dir}/drivers/pm/pm.c ${sedi_lib_src_dir}/drivers/pm/pm.S)
   zephyr_library_sources(${sedi_lib_src_dir}/drivers/dtf/dtf.c)
   zephyr_library_sources(${sedi_lib_src_dir}/drivers/ipc/ipc_bsp.c ${sedi_lib_src_dir}/drivers/ipc/fwst.c)
  endif()
 zephyr_library_named(sedi_io)
 zephyr_library_include_directories(${sedi_lib_src_dir}/drivers)
 zephyr_include_directories(${sedi_lib_src_dir}/soc/ehl_pse/include)
 zephyr_library_sources_ifdef(CONFIG_UART_SEDI ${sedi_lib_src_dir}/drivers/usart/dw_uart.c)
 zephyr_library_sources_ifdef(CONFIG_QEP_SEDI ${sedi_lib_src_dir}/drivers/qep/qep_sedi.c)
 zephyr_library_sources_ifdef(CONFIG_CAN_SEDI ${sedi_lib_src_dir}/drivers/can/sedi_driver_can.c)
 zephyr_library_sources_ifdef(CONFIG_PWM_SEDI ${sedi_lib_src_dir}/drivers/pwm/sedi_pwm.c)
 zephyr_library_sources_ifdef(CONFIG_SPI_SEDI ${sedi_lib_src_dir}/drivers/spi/spi_dw_apb.c)
 zephyr_library_sources_ifdef(CONFIG_I2S_SEDI ${sedi_lib_src_dir}/drivers/i2s/sedi_i2s.c)
 zephyr_library_sources_ifdef(CONFIG_GPIO_TIMED_SEDI ${sedi_lib_src_dir}/drivers/tgpio/sedi_tgpio.c)
 zephyr_library_sources_ifdef(CONFIG_GPIO_SEDI ${sedi_lib_src_dir}/drivers/gpio/gpio_bsp.c)
 zephyr_library_sources_ifdef(CONFIG_I2C_SEDI ${sedi_lib_src_dir}/drivers/i2c/i2c_dw_apb_200a.c)
 zephyr_library_sources_ifdef(CONFIG_WDT_SEDI ${sedi_lib_src_dir}/drivers/watchdog/sedi_watchdog.c)
 zephyr_library_sources(${sedi_lib_src_dir}/drivers/hpet/sedi_hpet.c)
 zephyr_library_sources_ifdef(CONFIG_DMA_SEDI ${sedi_lib_src_dir}/drivers/dma/dma_ann_1p0.c)
endif() #if(CONFIG_HAS_SEDI)
